--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "DefaultConnection": "Server=localhost;Database=Marple;User=root;Password=@Peter2023#;"
+  "DefaultConnection": "Server=localhost;Database=Marple;User=root;Password='your password';"
 }
 
 }
